--- a/custom.css
+++ b/custom.css
@@ -4,3 +4,6 @@ h1, h2, h3, h4, h5, h6 {
 p, div {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
 }
+body { 
+    background: url(funky-lines.png) repeat 0 0;
+}
