--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Corben', Georgia, Times, serif;
 }
-p, div {
+p, div, a {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
 }
 body { 
