--- a/custom.css
+++ b/custom.css
@@ -5,5 +5,5 @@ p, div, a {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
 }
 body { 
-    background-image: url("funky-lines.png");
+    background-image: url("sky.png");
 }
