--- a/custom.css
+++ b/custom.css
@@ -1,8 +1,10 @@
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Corben', Georgia, Times, serif;
+    color: white;
 }
 p, div, a {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
+    color: white;
 }
 body { 
     background-image: url("sky.png");
