--- a/custom.css
+++ b/custom.css
@@ -4,5 +4,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 p, div, a {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
-    color: white;
+    color: #EEEEEE;
 }
