--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Corben', Georgia, Times, serif;
     color: #C0F5FF;
+    text-decoration: underline wavy #C0F5FF;
 }
 p, div, a {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
