--- a/custom.css
+++ b/custom.css
@@ -4,6 +4,6 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: underline wavy #C0F5FF;
 }
 p, div, a {
-    font-family: 'Nobile', Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #EEEEEE;
 }
