--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,9 @@
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Corben', Georgia, Times, serif;
     color: #C0F5FF;
-    text-decoration: underline wavy #C0F5FF;
+    text-decoration: underline #C0F5FF;
 }
 p, div, a {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: #EEEEEE;
 }
