--- a/custom.css
+++ b/custom.css
@@ -2,8 +2,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Corben', Georgia, Times, serif;
     color: #C0F5FF;
     text-decoration: underline #C0F5FF;
+    font-size: 120%
 }
 p, div, a {
     font-family: 'Montserrat', sans-serif;
     color: #EEEEEE;
+    font-size: 120%;
 }
